--- a/src/app/user-detail/user-detail.component.html
+++ b/src/app/user-detail/user-detail.component.html
@@ -27,7 +27,7 @@
       <br />
       <td><b>Phone:</b> {{ user.phoneNumber }}</td>
       <br />
-      <td><b>Car:</b> {{ user.infos }}</td>
+      <td><b>Car Modell:</b> {{ user.carModell }}</td>
       <br />
      <!--  <td><b>Datum:</b> {{ user.birthDate | date : "EEEE, dd/MM/yyyy" }}</td> -->
     </div>
