--- a/src/app/user/user.component.html
+++ b/src/app/user/user.component.html
@@ -1,12 +1,10 @@
 <mat-card>
   <mat-card-content>
-    <mat-form-field>
-      <input
-        matInput
-        [(ngModel)]="searchText"
-        placeholder="Search for user"
-      />
+    <mat-form-field class="example-full-width" appearance="fill">
+      <mat-label>Search</mat-label>
+      <input matInput [(ngModel)]="searchText" (input)="filterUsers()">
     </mat-form-field>
+    
     <table class="user-table">
       <tr>
         <th>Name</th>
@@ -17,12 +15,12 @@
         <th>Flugstatus</th>
       </tr>
       <!-- <tr *ngFor="let user of allUsers" [routerLink]="['/user', user.id]"> -->
-        <tr *ngFor="let user of search()" [routerLink]="['/user', user.id]">
+        <tr *ngFor="let user of filteredUsers" [routerLink]="['/user', user.id]">
 
         <td>{{ user.firstName }} {{ user.lastName }}</td>
         <td>{{ user.flightNumber }}</td>
-        <td>{{ user.departureTime | date:'shortTime' }}</td>
-        <td>{{ user.arrivalTime | date:'shortTime' }}</td>
+        <td>{{ user.departureTime }}</td>
+        <td>{{ user.arrivalTime }}</td>        
         <td>{{ user.flightDestination }}</td>
         <td>{{ user.flightStatus }}</td>
       </tr>
