fix delete button

--- a/src/app/user-detail/user-detail.component.scss
+++ b/src/app/user-detail/user-detail.component.scss
@@ -1,6 +1,7 @@
 .user-detail-header {
-  height: 250px;
-  background-color: lemonchiffon;
+  height: 104px;
+  width: 60vw;
+  background-color: rgb(255, 255, 255);
   
 
   mat-card-content {
