--- a/src/app/dialog-add-user/dialog-add-user.component.html
+++ b/src/app/dialog-add-user/dialog-add-user.component.html
@@ -60,6 +60,19 @@
 
     <div>
       <mat-form-field appearance="outline" class="full-with">
+        <mat-label>Phone</mat-label>
+        <input
+          [disabled]="loading"
+          [(ngModel)]="user.phone"
+          matInput
+          placeholder="Phone"
+        />
+        <!-- <mat-hint>Please enter a name</mat-hint> -->
+      </mat-form-field>
+    </div>
+
+    <div>
+      <mat-form-field appearance="outline" class="full-with">
         <mat-label>Street + House No.</mat-label>
         <input
           [disabled]="loading"
