--- a/src/app/user/user.component.html
+++ b/src/app/user/user.component.html
@@ -1,22 +1,20 @@
-
-
 <mat-card>
   <mat-card-content>
     <mat-form-field class="example-full-width" appearance="fill">
       <mat-label>Search</mat-label>
-      <input matInput [(ngModel)]="searchText" (input)="filterUsers()">
+      <input matInput [(ngModel)]="searchText" (input)="filterUsers()" />
     </mat-form-field>
     <button
-  (click)="openDialog()"
-  class="add-user-btn"
-  mat-raised-button
-  color="primary"
-  matTooltip="Add user"
-  matTooltipPosition="above"
->
-  <mat-icon>person_add</mat-icon>
-</button>
-    
+      (click)="openDialog()"
+      class="add-user-btn"
+      mat-mini-fab 
+      color="primary"
+      matTooltip="Add user"
+      matTooltipPosition="above"
+    >
+      <mat-icon>person_add</mat-icon>
+    </button>
+
     <table class="user-table">
       <tr>
         <th>Name</th>
@@ -27,21 +25,33 @@
         <th>Flugstatus</th>
         <th></th>
       </tr>
-      <!-- <tr *ngFor="let user of allUsers" [routerLink]="['/user', user.id]"> -->
-        <tr *ngFor="let user of filteredUsers" [routerLink]="['/user', user.id]">
+
+      <tr *ngFor="let user of filteredUsers">
+        <!-- [routerLink]="['/user', user.id]" -->
 
         <td>{{ user.firstName }} {{ user.lastName }}</td>
         <td>{{ user.flightNumber }}</td>
         <td>{{ user.departureTime }}</td>
-        <td>{{ user.arrivalTime }}</td>        
+        <td>{{ user.arrivalTime }}</td>
         <td>{{ user.flightDestination }}</td>
         <td>{{ user.flightStatus }}</td>
         <td>
-          <button mat-button (click)="deleteUser(user.id)">X</button>
+          <button
+          [routerLink]="['/user', user.id]"
+          mat-icon-button
+          color="black"
+          >
+          <mat-icon>more_vert</mat-icon>
+        </button>
+          <button
+          (click)="deleteUser(user.id)"
+          mat-icon-button
+          color="warn"
+          >
+          <mat-icon>delete</mat-icon>
+        </button>
         </td>
-      
+      </tr>
     </table>
   </mat-card-content>
 </mat-card>
-
-
