add fix dashboard

--- a/src/app/user/user.component.html
+++ b/src/app/user/user.component.html
@@ -42,12 +42,13 @@
           mat-icon-button
           color="black"
           >
-          <mat-icon>edit_note</mat-icon>
+          <mat-icon>edit</mat-icon>
         </button>
           <button
           (click)="deleteUser(user.id)"
           mat-icon-button
           color="warn"
+          
           >
           <mat-icon>delete</mat-icon>
         </button>
