--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -4,7 +4,7 @@
 
     <ul class="menu-item">
       <li routerLink="/dashboard" routerLinkActive="router-link-active"><mat-icon>fact_check</mat-icon>Dashboard</li>
-      <li routerLink="/user" routerLinkActive="router-link-active"><mat-icon>perm_identity</mat-icon>User</li>
+      <li routerLink="/user" routerLinkActive="router-link-active"><mat-icon>perm_identity</mat-icon>Guests</li>
     </ul>
   </mat-drawer>
 
