edit guest fields

--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -5,7 +5,9 @@
     <ul class="menu-item">
       <li routerLink="/dashboard" routerLinkActive="router-link-active"><mat-icon>fact_check</mat-icon>Dashboard</li>
       <li routerLink="/user" routerLinkActive="router-link-active"><mat-icon>perm_identity</mat-icon>Guests</li>
+      <li routerLink="/tasks" routerLinkActive="router-link-active"><mat-icon>add_task</mat-icon>Tasks</li>
     </ul>
+   
   </mat-drawer>
 
   <div class="example-sidenav-content">
