--- a/src/app/app.component.scss
+++ b/src/app/app.component.scss
@@ -15,6 +15,7 @@
   border-bottom: 1px solid rgba(0, 0, 0, 0.04);
   padding-left: 16px;
   padding-right: 16px;
+  padding-bottom: 26px;
   min-height: 56px;
   display: flex;
   align-items: center;
