--- a/src/app/user/user.component.html
+++ b/src/app/user/user.component.html
@@ -17,11 +17,11 @@
 
 <table class="user-table" >
   <tr>
-    <th>Name</th>
+    <th>Guest Name</th>
 
-    <th>Check-in Datum</th>
-    <th>Check-out Datum</th>
-    <th>Zimmernummer</th>
+    <th>Check-in</th>
+    <th>Check-out</th>
+    <th>Room</th>
    
     
     <th>Reservierungsstatus</th>
@@ -34,8 +34,8 @@
 
     <td >{{ user.firstName }} {{ user.lastName }} </td>
    
-    <td>{{ user.checkInDate }}</td>
-    <td>{{ user.checkOutDate }}</td>
+    <td>{{ user.checkInDate | date:'dd.MM.yyyy'}}</td>
+    <td>{{ user.checkOutDate | date:'dd.MM.yyyy'}}</td>
     <td>{{ user.roomNumber }}</td>
    
     <td>{{ user.reservationStatus }}</td>
