--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -6,6 +6,7 @@
       <li routerLink="/dashboard" routerLinkActive="router-link-active"><mat-icon>fact_check</mat-icon>Dashboard</li>
       <li routerLink="/user" routerLinkActive="router-link-active"><mat-icon>perm_identity</mat-icon>Guests</li>
       <li routerLink="/tasks" routerLinkActive="router-link-active"><mat-icon>add_task</mat-icon>Tasks</li>
+      <li routerLink="/user-list" routerLinkActive="router-link-active"><mat-icon>analytics</mat-icon>user-list</li>
     </ul>
    
   </mat-drawer>
