--- a/src/app/dashboard/dashboard.component.html
+++ b/src/app/dashboard/dashboard.component.html
@@ -1,17 +1,44 @@
 <mat-card class="min-with">
-    <mat-card-header>
-      <mat-card-title>total guests</mat-card-title>
-    </mat-card-header>
-    <mat-card-content>
-      <p>{{userCount}}</p>
-    </mat-card-content>
-  </mat-card>
+  <mat-card-header>
+    <mat-card-title>total guests</mat-card-title>
+  </mat-card-header>
+  <mat-card-content>
+    <p>{{ userCount }}</p>
+  </mat-card-content>
+</mat-card>
 
-  <div *ngIf="weatherData">
-    <h1>{{ weatherData.name }}</h1>
-    <p>Temperatur: {{ weatherData.main.temp }}</p>
-    <p>Bedingungen: {{ weatherData.weather[0].description }}</p>
-  </div>
+<mat-card class="min-width">
+  <mat-card-header>
+    <mat-card-title>Wetterdaten</mat-card-title>
+  </mat-card-header>
+  <mat-card-content>
+    <div *ngIf="weatherData">
+      <h2>{{ weatherData.name }}</h2>
+      <p>
+        Temperatur:
+        {{
+          getTemperatureInCelsius(weatherData.main.temp) | number : "1.0-0"
+        }}
+        °C
+      </p>
+      <p>Bedingungen: {{ weatherData.weather[0].description }}</p>
+    </div>
+  </mat-card-content>
+</mat-card>
+
+<mat-card *ngIf="forecastData">
+  <mat-card-header>
+    <mat-card-title>5 Day Forecast</mat-card-title>
+  </mat-card-header>
+  <mat-card-content>
+    <div *ngFor="let forecast of forecastData">
+      <p>Date: {{ forecast.dt_txt }}</p>
+      <p>Temperature: {{ getTemperatureInCelsius(forecast.main.temp) | number:'1.0-0' }} °C</p>
+      <p>Conditions: {{ forecast.weather[0].description }}</p>
+    </div>
+  </mat-card-content>
+</mat-card>
+
 
 <!--   <mat-card *ngFor="let user of usersCheckInOut">
     <mat-card-header>
@@ -22,5 +49,3 @@
       <p>Check-Out: {{user.checkOutDate | date}}</p>
     </mat-card-content>
   </mat-card> -->
-  
-  
