--- a/src/app/dashboard/dashboard.component.scss
+++ b/src/app/dashboard/dashboard.component.scss
@@ -1,6 +1,7 @@
 .forecast-container {
     display: flex;
     flex-wrap: wrap;
+    flex-direction: column;
     justify-content: space-between;
   }
   
