--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -10,12 +10,16 @@
    
   </mat-drawer>
 
-  <div class="example-sidenav-content">
+  <div class="example-sidenav-content ">
     <mat-toolbar color="primary">
       <mat-toolbar-row>
         <mat-icon class="menu-icon" (click)="drawer.toggle()">menu</mat-icon>
 
         <span>Guest Management System</span>
+        <div class="translate-box">
+        <a (click)="translate.use('en');">EN</a>  /  
+        <a (click)="translate.use('de');">DE</a>
+      </div>
       </mat-toolbar-row>
     </mat-toolbar>
 
