--- a/src/app/app.component.scss
+++ b/src/app/app.component.scss
@@ -1,3 +1,10 @@
+.translate-box {
+  display: flex;
+  justify-content: center;
+  align-items: center;
+  cursor: pointer;
+}
+
 .mat-drawer-container {
   height: 100vh;
 }
@@ -25,6 +32,7 @@ mat-toolbar-row,
 mat-toolbar {
   min-height: 56px;
   height: 56px;
+  justify-content: space-between;
 }
 
 .menu-item {
@@ -40,8 +48,9 @@ mat-toolbar {
     align-items: center;
     cursor: pointer;
 
-    mat-icon{
-      margin-right: 16px;}
+    mat-icon {
+      margin-right: 16px;
+    }
 
     &:hover {
       background-color: rgba(0, 0, 0, 0.04);
@@ -54,8 +63,7 @@ mat-toolbar {
 }
 
 .router-container {
- padding-left: 56px;
+  padding-left: 56px;
   padding-right: 56px;
   padding-top: 16px;
- 
 }
