--- a/src/app/dashboard/dashboard.component.html
+++ b/src/app/dashboard/dashboard.component.html
@@ -1,6 +1,6 @@
 <mat-card class="min-with">
   <mat-card-header>
-    <mat-card-title>total guests</mat-card-title>
+    <mat-card-title translate>total guests</mat-card-title>
   </mat-card-header>
   <mat-card-content>
     <p>{{ userCount }}</p>
