--- a/src/app/user-detail/user-detail.component.html
+++ b/src/app/user-detail/user-detail.component.html
@@ -22,7 +22,7 @@
   </mat-card-content>
 </mat-card>
 
-<mat-card class="mt-32" *ngIf="user">
+<!-- <mat-card class="mt-32" *ngIf="user">
   <mat-card-header>
     <button
       mat-icon-button
@@ -42,4 +42,4 @@
     {{ user.street }} <br />
     {{ user.zipCode }} {{ user.city }}
   </mat-card-content>
-</mat-card>
+</mat-card> -->
