--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -18,8 +18,8 @@
 
         <span>Guest Management System</span>
         <div class="translate-box">
-        <a (click)="translate.use('en');">EN</a>  /  
-        <a (click)="translate.use('de');">DE</a>
+        <a (click)="translate.use('en');">ENG</a>  /  
+        <a (click)="translate.use('de');">DEU</a>
       </div>
       </mat-toolbar-row>
     </mat-toolbar>
