--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -1,4 +1,4 @@
-<mat-drawer-container class="mat-drawer-container" autosize>
+<mat-drawer-container class="mat-drawer-container" autosize *ngIf="isLoggedIn">
   <mat-drawer #drawer class="sidenav" [opened]="true" mode="side">
     <div class="logo-container"><img src="assets/img/hotel.png" alt=""></div>
 
@@ -27,8 +27,10 @@
     <div class="router-container">
       <router-outlet></router-outlet>
     </div>
-
-
-
   </div>
 </mat-drawer-container>
+
+<!-- This is added to handle the case when isLoggedIn is false -->
+<div *ngIf="!isLoggedIn" class="router-container">
+  <router-outlet></router-outlet>
+</div>
