--- a/src/app/login/login.component.html
+++ b/src/app/login/login.component.html
@@ -1,16 +1,32 @@
-<form [formGroup]="loginForm" (ngSubmit)="login()">
-  <label for="email">Email:</label><br>
-  <input type="email" id="email" formControlName="email"><br>
-  <div *ngIf="loginForm.controls['email'].errors?.['required']">Email is required</div>
+<mat-card>
+  <mat-card-header>
+    <mat-card-title>Login</mat-card-title>
+  </mat-card-header>
 
-  <div *ngIf="loginForm.controls['email'].errors?.['email']">Email is not valid</div>
-  <label for="pwd">Password:</label><br>
-  <input type="password" id="pwd" formControlName="password"><br>
-  <div *ngIf="loginForm.controls['password'].errors?.['required']">Password is required</div>
-<div *ngIf="loginForm.controls['password'].errors?.['minlength']">Password must be at least 6 characters</div>
+  <mat-card-content>
+    <form [formGroup]="loginForm" (ngSubmit)="login()">
+      <mat-form-field appearance="outline" class="full-width">
+        <mat-label>Email</mat-label>
+        <input matInput type="email" formControlName="email">
+        <mat-error *ngIf="loginForm.controls['email'].errors?.['required']">Email is required</mat-error>
+        <mat-error *ngIf="loginForm.controls['email'].errors?.['email']">Email is not valid</mat-error>
+      </mat-form-field>
 
-  <input type="submit" value="Login" [disabled]="!loginForm.valid">
-</form>
-<button (click)="signup()" [disabled]="!loginForm.valid">Register</button>
-<button (click)="guestLogin()">Guest Login</button>
+      <mat-form-field appearance="outline" class="full-width">
+        <mat-label>Password</mat-label>
+        <input matInput type="password" formControlName="password">
+        <mat-error *ngIf="loginForm.controls['password'].errors?.['required']">Password is required</mat-error>
+        <mat-error *ngIf="loginForm.controls['password'].errors?.['minlength']">Password must be at least 6 characters</mat-error>
+      </mat-form-field>
+
+      <button mat-raised-button color="primary" type="submit" [disabled]="!loginForm.valid">Login</button>
+    </form>
+  </mat-card-content>
+
+  <mat-card-actions>
+    <button mat-button (click)="signup()" [disabled]="!loginForm.valid">Register</button>
+    <button mat-button (click)="guestLogin()">Guest Login</button>
+  </mat-card-actions>
+</mat-card>
+
 <div>{{ status }}</div>
