--- a/src/app/dialog-add-user/dialog-add-user.component.html
+++ b/src/app/dialog-add-user/dialog-add-user.component.html
@@ -151,14 +151,12 @@
     <div>
       <mat-form-field appearance="outline" class="full-with">
         <mat-label>Room Number</mat-label>
-        <input
-          [disabled]="loading"
-          [(ngModel)]="user.roomNumber"
-          matInput
-          placeholder="Room Number"
-        />
+        <select matNativeControl [disabled]="loading" [(ngModel)]="user.roomNumber">
+          <option *ngFor="let room of availableRooms | async" [value]="room.number">{{ room.number }}</option>
+        </select>
       </mat-form-field>
     </div>
+    
 
     <div>
       <mat-form-field appearance="outline" class="full-with">
