--- a/src/app/dialog-edit-user/dialog-edit-user.component.html
+++ b/src/app/dialog-edit-user/dialog-edit-user.component.html
@@ -157,6 +157,7 @@
           [(ngModel)]="user.roomNumber"
           matInput
           placeholder="Room Number"
+          readonly
         />
       </mat-form-field>
     </div>
